--- a/pages/index.html
+++ b/pages/index.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
-{% block content %}
-Welcome to Cactus!
-{% endblock %}
+<?php 
+  header('Location: https://www.google.com');
+  exit;
+?>
