--- a/pages/index.html
+++ b/pages/index.html
@@ -1,4 +1,4 @@
-<?php 
-  header('Location: https://www.google.com');
-  exit;
+<?php
+  header('Location: http://www.new-website.com/', true, 301);
+  exit();
 ?>
